; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-etm4x-sysfs.c_ctxid_masks_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwtracing/coresight/extr_coresight-etm4x-sysfs.c_ctxid_masks_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.etmv4_drvdata = type { i32, %struct.etmv4_config }
%struct.etmv4_config = type { i64, i64 }

@current = common dso_local global i32 0, align 4
@init_pid_ns = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"%#lx %#lx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @ctxid_masks_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ctxid_masks_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.etmv4_drvdata*, align 8
  %11 = alloca %struct.etmv4_config*, align 8
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %12 = load %struct.device*, %struct.device** %5, align 8
  %13 = getelementptr inbounds %struct.device, %struct.device* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call %struct.etmv4_drvdata* @dev_get_drvdata(i32 %14)
  store %struct.etmv4_drvdata* %15, %struct.etmv4_drvdata** %10, align 8
  %16 = load %struct.etmv4_drvdata*, %struct.etmv4_drvdata** %10, align 8
  %17 = getelementptr inbounds %struct.etmv4_drvdata, %struct.etmv4_drvdata* %16, i32 0, i32 1
  store %struct.etmv4_config* %17, %struct.etmv4_config** %11, align 8
  %18 = load i32, i32* @current, align 4
  %19 = call i32* @task_active_pid_ns(i32 %18)
  %20 = icmp ne i32* %19, @init_pid_ns
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %4, align 4
  br label %42

24:                                               ; preds = %3
  %25 = load %struct.etmv4_drvdata*, %struct.etmv4_drvdata** %10, align 8
  %26 = getelementptr inbounds %struct.etmv4_drvdata, %struct.etmv4_drvdata* %25, i32 0, i32 0
  %27 = call i32 @spin_lock(i32* %26)
  %28 = load %struct.etmv4_config*, %struct.etmv4_config** %11, align 8
  %29 = getelementptr inbounds %struct.etmv4_config, %struct.etmv4_config* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  store i64 %30, i64* %8, align 8
  %31 = load %struct.etmv4_config*, %struct.etmv4_config** %11, align 8
  %32 = getelementptr inbounds %struct.etmv4_config, %struct.etmv4_config* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  store i64 %33, i64* %9, align 8
  %34 = load %struct.etmv4_drvdata*, %struct.etmv4_drvdata** %10, align 8
  %35 = getelementptr inbounds %struct.etmv4_drvdata, %struct.etmv4_drvdata* %34, i32 0, i32 0
  %36 = call i32 @spin_unlock(i32* %35)
  %37 = load i8*, i8** %7, align 8
  %38 = load i32, i32* @PAGE_SIZE, align 4
  %39 = load i64, i64* %8, align 8
  %40 = load i64, i64* %9, align 8
  %41 = call i32 @scnprintf(i8* %37, i32 %38, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i64 %39, i64 %40)
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %24, %21
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local %struct.etmv4_drvdata* @dev_get_drvdata(i32) #1

declare dso_local i32* @task_active_pid_ns(i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @scnprintf(i8*, i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
